# zarr-sparse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
zarr_sparse/: __init__.py  buffer.py  chunks.py  codec.py  combine.py  comparison.py  slices.py  sparse.py
zarr_sparse/codec/: __init__.py  codec.py  metadata.py
zarr_sparse/tests/: __init__.py  generate.py  strategies.py  test_combine.py  test_extract_arrays.py  test_metadata_codec.py  test_ndbuffer.py  test_slices.py
