[project]
name = "zarr-sparse"
description = "Codec-based encoding for sparse arrays"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "zarr>=3.0.8",
]
dynamic = ["version"]
license = "MIT"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"

[tool.hatch.build]
hooks.vcs.version-file = "zarr_sparse/_version.py"
